smooth scroll added

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @keyframes gradientShift {
   0% {
     background-position: 0% 50%;
@@ -13,5 +14,5 @@
 .animated-bg {
   background: linear-gradient(to bottom right, #ffe4e6, #e0f2fe, #bfdbfe);
   background-size: 400% 400%;
-  /* animation: gradientShift 12s ease infinite; */
+  animation: gradientShift 12s ease infinite;
 }
